# DeadBeef-watch-dir-plugin

./: CMakeLists.txt  README.txt  install.sh  lib.c  utils.c  utils.h
